--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,40 @@
 {
-  "name": "carbon_net",
+  "name": "CarbonNet",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Carbon Emission Tracking and Sustainability Platform",
+  "main": "app.js",
   "scripts": {
-    "carbonnet": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test": "jest --watchAll"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "author": "Aditya",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
-    "body-parser": "^2.2.0",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "mysql2": "^3.6.5",
+    "sequelize": "^6.35.0",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.1",
-    "mysql2": "^3.15.0",
-    "nodemon": "^3.1.10"
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "multer": "^1.4.5-lts.1",
+    "xlsx": "^0.18.5",
+    "papaparse": "^5.4.1",
+    "pdf-parse": "^1.1.1",
+    "nodemailer": "^6.9.7",
+    "cookie-parser": "^1.4.6",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0",
+    "joi": "^17.11.0",
+    "crypto": "^1.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
