--- a/server/package.json
+++ b/server/package.json
@@ -9,32 +9,33 @@
     "test": "jest --watchAll"
   },
   "author": "Aditya",
- "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
-    "mysql2": "^3.6.5",
-    "sequelize": "^6.35.0",
+  "dependencies": {
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "xlsx": "^0.18.5",
+    "mysql2": "^3.6.5",
+    "nodemailer": "^6.9.7",
     "papaparse": "^5.4.1",
     "pdf-parse": "^1.1.1",
-    "nodemailer": "^6.9.7",
-    "cookie-parser": "^1.4.6",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0",
-    "joi": "^17.11.0",
-    "crypto": "^1.0.1"
+    "sequelize": "^6.35.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   }
 }
